src/objects/DeliveryInformation__c.object
<CustomObject>
    <fields>
        <fullName>ConfiguringSngle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>订单产品</label>
        <referenceTo>ConfigurationList__c</referenceTo>
        <relationshipLabel>发货信息</relationshipLabel>
        <relationshipName>ConfiguringSngle</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DateOfShipment__c</fullName>
        <label>发货日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DeliveryContent__c</fullName>
        <label>发货内容</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryNumber__c</fullName>
        <label>货运单号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeviseSerialNumber__c</fullName>
        <label>设备序列号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <label>产品名称</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductNumber__c</fullName>
        <label>产品编号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipableQuantity__c</fullName>
        <label>未发货数量</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShippedQuantity__c</fullName>
        <label>已发货数量</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>order1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>订单</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>发货信息</relationshipLabel>
        <relationshipName>order1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>发货信息</label>
    <nameField>
        <label>发货信息 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>发货信息</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>